test/src/test/k3s/test/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  # fixed ip to enable `hostAlias` to rewrite `keycloak.127.0.0.1.nip.io` from service name `keycloak`
  clusterIP: 10.53.100.1
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: keycloak
